Fix small typo in Dutch Language

--- a/locale/nl/LC_MESSAGES/multisystem.nl.po
+++ b/locale/nl/LC_MESSAGES/multisystem.nl.po
@@ -581,7 +581,7 @@ msgstr "Test"
 
 #, sh-format
 msgid "Ajouter un liveCD"
-msgstr "Vroeg LiveCD toePa"
+msgstr "Voeg LiveCD toe"
 
 #, sh-format
 msgid "Ouvrir VirtualBox"
